Full flow of megad server endpoint

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,11 @@
+logging:
+  level:
+    org:
+      springframework:
+        web:
+          filter:
+            CommonsRequestLoggingFilter: INFO
+
 spreadsheet:
   credentials_json: "/google-sheets-client-secret.json"
   tokens_folder: "google-tokens"
