Refactor event listeners

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,9 @@ logging:
       glifery:
         smarthome:
           adapter: WARN
-          application: DEBUG
+          application:
+            event:
+              listener: WARN
       springframework:
         web:
           filter:
