--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ logging:
     org:
       glifery:
         smarthome:
-          adapter: WARN
+          adapter: INFO
           application:
             event:
               listener: WARN
@@ -16,6 +16,8 @@ application:
   direct_megad_response: false
   double_click_milliseconds: 1000
   hold_click_milliseconds: 1000
+  autoupdate_port_state_disabled: false
+  autoupdate_port_state_seconds: 10
 
 spreadsheet:
   credentials_json: "/google-sheets-client-secret.json"
