--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,8 +38,61 @@ megad:
       name: Megad1
       spreadsheet:
         first_row_for_p0: 8
+      titles:
+        0: Бра в прихожей
+        1: Лента над плитой
+        2: Бра в гостиной
+        3: Кухня возле холодильника
+        4: Кухня возле плиты
+        5: Коридор к санузлу (в кухне)
+        6: Коридор к санузлу (ок. спальни)
+        7: Бра в прихожей
+        8: Лента над плитой
+        9: Лента в гостиной
+        10: Кухня возле плиты
+        12: Кухня возле холодильника
+        13: Коридор к санузлу
+        15: Лента в гостиной
+        16: Лента над холодильником
+        17: Прихожая (ок. входной двери)
+        18: Прихожая (в кухне)
+        19: Трековый светильник в гостиной
+        20: Обеденный стол
+        22: Бра в гостиной
+        23: Лента над холодильником
+        24: Бра над входной дверью
+        25: Прихожая
+        27: Трековый светильник в гостиной
+        28: Обеденный стол
     megad2:
       host: http://192.168.0.142
       name: Megad2
       spreadsheet:
         first_row_for_p0: 42
+      titles:
+        0: Лента в санузле
+        1: Бра в лоджии
+        2: Лента в спальне (у шкафа)
+        3: Лента в спальне (у окна)
+        4: Кабинет
+        5: Лоджия
+        6: Вентилятор в санузле
+        7: Лента в санузле
+        8: Бра в лоджии
+        9: Лента в спальне
+        10: Кабинет
+        12: Лоджия
+        13: Санузел верхний свет
+        15: Гардеробная
+        16: Лента в кабинете
+        17: Санузел верхний свет
+        18: Спальня над кроватью
+        19: Спальня у окна
+        20: Бра в спальне (у шкафа)
+        21: Бра в спальне (у окна)
+        22: Гардеробная
+        23: Лента в кабинете
+        24: Вентилятор в санузле
+        25: Спальня над кроватью
+        27: Спальня у окна
+        28: Бра в спальне
