Desplay only input ports in UI

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,61 +38,163 @@ megad:
       name: Megad1
       spreadsheet:
         first_row_for_p0: 8
-      titles:
-        0: Бра в прихожей
-        1: Лента над плитой
-        2: Бра в гостиной
-        3: Кухня возле холодильника
-        4: Кухня возле плиты
-        5: Коридор к санузлу (в кухне)
-        6: Коридор к санузлу (ок. спальни)
-        7: Бра в прихожей
-        8: Лента над плитой
-        9: Лента в гостиной
-        10: Кухня возле плиты
-        12: Кухня возле холодильника
-        13: Коридор к санузлу
-        15: Лента в гостиной
-        16: Лента над холодильником
-        17: Прихожая (ок. входной двери)
-        18: Прихожая (в кухне)
-        19: Трековый светильник в гостиной
-        20: Обеденный стол
-        22: Бра в гостиной
-        23: Лента над холодильником
-        24: Бра над входной дверью
-        25: Прихожая
-        27: Трековый светильник в гостиной
-        28: Обеденный стол
+      ports:
+        0:
+          title: Бра в прихожей
+          type: input
+        1:
+          title: Лента над плитой
+          type: input
+        2:
+          title: Бра в гостиной
+          type: input
+        3:
+          title: Кухня возле холодильника
+          type: input
+        4:
+          title: Кухня возле плиты
+          type: input
+        5:
+          title: Коридор к санузлу (в кухне)
+          type: input
+        6:
+          title: Коридор к санузлу (ок. спальни)
+          type: input
+        7:
+          title: Бра в прихожей
+          type: output
+        8:
+          title: Лента над плитой
+          type: output
+        9:
+          title: Лента в гостиной
+          type: output
+        10:
+          title: Кухня возле плиты
+          type: output
+        12:
+          title: Кухня возле холодильника
+          type: output
+        13:
+          title: Коридор к санузлу
+          type: output
+        15:
+          title: Лента в гостиной
+          type: input
+        16:
+          title: Лента над холодильником
+          type: input
+        17:
+          title: Прихожая (ок. входной двери)
+          type: input
+        18:
+          title: Прихожая (в кухне)
+          type: input
+        19:
+          title: Трековый светильник в гостиной
+          type: input
+        20:
+          title: Обеденный стол
+          type: input
+        22:
+          title: Бра в гостиной
+          type: output
+        23:
+          title: Лента над холодильником
+          type: output
+        24:
+          title: Бра над входной дверью
+          type: output
+        25:
+          title: Прихожая
+          type: output
+        27:
+          title: Трековый светильник в гостиной
+          type: output
+        28:
+          title: Обеденный стол
+          type: output
     megad2:
       host: http://192.168.0.142
       name: Megad2
       spreadsheet:
         first_row_for_p0: 42
-      titles:
-        0: Лента в санузле
-        1: Бра в лоджии
-        2: Лента в спальне (у шкафа)
-        3: Лента в спальне (у окна)
-        4: Кабинет
-        5: Лоджия
-        6: Вентилятор в санузле
-        7: Лента в санузле
-        8: Бра в лоджии
-        9: Лента в спальне
-        10: Кабинет
-        12: Лоджия
-        13: Санузел верхний свет
-        15: Гардеробная
-        16: Лента в кабинете
-        17: Санузел верхний свет
-        18: Спальня над кроватью
-        19: Спальня у окна
-        20: Бра в спальне (у шкафа)
-        21: Бра в спальне (у окна)
-        22: Гардеробная
-        23: Лента в кабинете
-        24: Вентилятор в санузле
-        25: Спальня над кроватью
-        27: Спальня у окна
-        28: Бра в спальне
+      ports:
+        0:
+          title: Лента в санузле
+          type: input
+        1:
+          title: Бра в лоджии
+          type: input
+        2:
+          title: Лента в спальне (у шкафа)
+          type: input
+        3:
+          title: Лента в спальне (у окна)
+          type: input
+        4:
+          title: Кабинет
+          type: input
+        5:
+          title: Лоджия
+          type: input
+        6:
+          title: Вентилятор в санузле
+          type: input
+        7:
+          title: Лента в санузле
+          type: output
+        8:
+          title: Бра в лоджии
+          type: output
+        9:
+          title: Лента в спальне
+          type: output
+        10:
+          title: Кабинет
+          type: output
+        12:
+          title: Лоджия
+          type: output
+        13:
+          title: Санузел верхний свет
+          type: output
+        15:
+          title: Гардеробная
+          type: input
+        16:
+          title: Лента в кабинете
+          type: input
+        17:
+          title: Санузел верхний свет
+          type: input
+        18:
+          title: Спальня над кроватью
+          type: input
+        19:
+          title: Спальня у окна
+          type: input
+        20:
+          title: Бра в спальне (у шкафа)
+          type: input
+        21:
+          title: Бра в спальне (у окна)
+          type: input
+        22:
+          title: Гардеробная
+          type: output
+        23:
+          title: Лента в кабинете
+          type: output
+        24:
+          title: Вентилятор в санузле
+          type: output
+        25:
+          title: Спальня над кроватью
+          type: output
+        27:
+          title: Спальня у окна
+          type: output
+        28:
+          title: Бра в спальне
+          type: output
